# benchmark_ph_optimization

./: .gitignore  README.md  main.py  main_ph_grad.py  main_ph_loss.py  ph_opt_public.yaml  pyproject.toml  setup.py
bash/: execution.sh
data/: circle_with_one_outlier_num-pts=100.npy
notebooks/: 01_usage_of_algorithms.ipynb  02_usage_of_gradient_interface.ipynb  basic_usage.ipynb  interface_for_comparison.ipynb  ph_opt_example.ipynb  simple_circle.npy
ph_opt/: __init__.py
ph_opt/data/: __init__.py  generate.py
ph_opt/optimizer/: __init__.py  optimizer.py
ph_opt/ph_compute/: ph_computation_library.py  ph_cpp_library.hpp  ph_cpp_library_pybind.cpp
ph_opt/ph_grad/: singleton.py  stratified_gd.py  topk_persistence.py  wasserstein.py
ph_opt/ph_grad/lib/: stratified_gd.py  wasserstein.py
ph_opt/ph_loss/: algorithms.py  persistence_based_loss.py  regularization.py
ph_opt/ph_net/: wasserstein.py
ph_opt/scheduler/: __init__.py  scheduler.py
ph_opt/utils/: ph_trainer.py  visualization.py
private/: 01_proof_of_concept.py  02_topoae.py
scripts/: data_loader.py  persistence_based_loss.py  ph_optimization.py  regularization.py
scripts/lib/: .nfs0000001802942fc800000291  ph_computation_library.py  ph_cpp_library.hpp  ph_cpp_library_pybind.cpp  ph_optimization_library.py  scheduler.py  visualization.py
test/: test_ph_compute.py
