[project]
name = "ph_opt"
version = "1.0.1"
description = "Library for optimizing persistent homology of point clouds"
authors = [
    { name = "Naoki Nishikawa", email = "nishikawa-naoki259@g.ecc.u-tokyo.ac.jp" }
]
readme = "README.md"
requires-python = ">=3.9.3"
dependencies = [
    "eagerpy>=0.29.0",
    "giotto-ph>=0.2.2",
    "gudhi>=3.9.0",
    "ipykernel>=6.17.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.3,<2.0.0",
    "pot>=0.9.3",
    "pybind11>=2.6.1",
    "torch>=2.2.0",
]

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"